some helper and test code for nvidia qualification tool